--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'com.android.support:appcompat-v7:29'
 
 
     //listview adapter 流式布局，支持单选、多选等，适合用于产品标签等。
@@ -40,7 +42,7 @@ dependencies {
 //    implementation 'com.nineoldandroids:library:2.4.0'
 
 
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
+//    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
     //轮播图
 //    api 'com.youth.banner:banner:1.4.10'
     //webview框架
@@ -56,7 +58,10 @@ dependencies {
     api 'me.yokeyword:fragmentationx-swipeback:1.0.2'
     //下拉加载刷新
 //    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-18'
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+//    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.3'
+    api  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
+    api  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
+    api  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
 //    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
 //    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'
     //okhttp
